--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>My Site Title</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+<h1>Hello, World!</h1>
+<a href="https://flatironschool.com">Flatiron School</a>
+</body>
+</html>
